# BaseRepository

./: .gitignore  .hgignore
source/: CMakeLists.txt
source/cli/: cli_main.cpp
source/common/: CMakeLists.txt  common.h  threading_wrapper.cpp  threading_wrapper.h
source/gui/: CMakeLists.txt
source/gui/MFCDlgMainApp/: MFCMainApp.rc  MFCMainDlg.cpp  MFCMainDlg.h
